#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([dorm], [0.1.0], [https://github.com/CiYong/dorm])
AM_INIT_AUTOMAKE([-Wall foreign subdir-objects])

# Checks for programs.
AC_PROG_CXX

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
